syntax = "proto3";
package msgpb;

import "message.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/any.proto";

message ConfigureRequest {
    map<string, google.protobuf.Any> data = 1;
}

message ConfigureResponse {
    google.protobuf.StringValue error = 1;
}

message FilterRequest {
    Msg msg = 1;
}

message FilterResponse {
    Msg msg = 1;
    bool continueNext = 2;
    google.protobuf.StringValue error = 3;
}

service FilterPlugin {
    rpc Configure(ConfigureRequest) returns (ConfigureResponse);
    rpc Filter(FilterRequest) returns (FilterResponse);
}